tests/lean/448.lean.expected.out
448.lean:21:2-23:20: error: failed to synthesize instance
  MonadExceptOf IO.Error M
